// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> should render a Code block with custom context, size and icon 1`] = `
<div
  className="nice-code-container"
  style={Object {}}
>
  <div
    className="nice-code-heading good icon fa-code"
  >
    Custom context
  </div>
  <code
    className="restrain-m"
  >
    {
    "some": "json"
}
  </code>
</div>
`;

exports[`<Code /> should render a Code block with heading and syntax 1`] = `
<div
  className="nice-code-container"
  style={Object {}}
>
  <div
    className="nice-code-heading"
  >
    Sample code block
    <div
      className="nice-code-syntax"
    >
      JSON
    </div>
  </div>
  <code
    className="restrain-s"
  >
    {
    "some": "json"
}
  </code>
</div>
`;

exports[`<Code /> should render a Code block with heading but no syntax 1`] = `
<div
  className="nice-code-container"
  style={Object {}}
>
  <div
    className="nice-code-heading"
  >
    Sample code block
  </div>
  <code
    className="restrain-s"
  >
    {
    "some": "json"
}
  </code>
</div>
`;

exports[`<Code /> should render a Code block without heading 1`] = `
<div
  className="nice-code-container"
  style={Object {}}
>
  <code
    className="restrain-s"
  >
    {
    "some": "json"
}
  </code>
</div>
`;

exports[`<Code /> should render with a Code block with custom className/style 1`] = `
<div
  className="nice-code-container my-custom-classname"
  style={
    Object {
      "left": 50,
    }
  }
>
  <div
    className="nice-code-heading good icon fa-code"
  >
    Hello
  </div>
  <code
    className="restrain-s"
  >
    { some": "json" }
  </code>
</div>
`;
